# SAiR-MLOps

./: .gitignore  .gitmodules  README.md
DDODS/: .gitignore  Makefile  README.md  SYSTEM_MAP.md  main.py  pyproject.toml
DDODS/.github/workflows/: notebooks.yml
DDODS/1_FastAPI_Docker_demo/: Dockerfile  FASTAPI_DOCKER_GUIDE.md  README.MD  article.md  test.py
DDODS/2_Docker_crash_course/: Dockerfile  docker-compose.yml  docker_commands.md  package-lock.json  server.js
DDODS/3_Versioning/: DVC_GUIDE.md
DDODS/3_Versioning/version-project/: pyproject.toml
DDODS/4_Mlflow_exp_tracking/: README.md  exp-tracking.ipynb  pyproject.toml
DDODS/4_Mlflow_exp_tracking/model_dir/: MLmodel  model.pkl
DDODS/5_Weights_and_Biases/: WANDB_GUIDE.md  sklearn_demo.ipynb  ts_lstm_demo.ipynb
DDODS/5_Weights_and_Biases/wandb/: latest-run
DDODS/6_Data_Pipeline_Part1/: DATA_PIPELINE_GUIDE.md  data_pipeline.ipynb
DDODS/6_Data_Pipeline_Part_1/: .gitignore  data.csv  data_pipeline.ipynb  note.ipynb
DDODS/7_Data_Pipeline_Part2_FS/: FEAST_GUIDE.md  FEAST_QUICKSTART.md  feast_mastery.html  pipeline_with_feast.ipynb
DDODS/7_Data_Pipeline_Part2_FS/feat_telco_repo/: feature_store.yaml  registry.db
DDODS/8_Data_Pipeline_Part3_Spark_Prefect/: DATA_PIPELINE_PART3_GUIDE.md
DDODS/8_Data_Pipeline_Part3_Spark_Prefect/prefect-demo/: README.md
DDODS/8_Data_Pipeline_Part3_Spark_Prefect/spark-demo/: SPARK_GUIDE.md  pyspark-vs-pandas.ipynb  spark-ml.py
DDODS/9_Compression_and_Optimization/: COMPRESSION_GUIDE.md  COMPRESSION_OVERVIEW.md  mnist_mlp_compact.pth  mnist_mlp_precompact.pth  model_mnist_pruned_csr.pkl
DDODS/9_Compression_and_Optimization/KD/: KD_GUIDE.md  kd.ipynb
DDODS/9_Compression_and_Optimization/Quantization/: QNT_GUIDE.md  qnt.ipynb
DDODS/9_Compression_and_Optimization/onnx/: ONNX_GUIDE.md  mlp.onnx  mlp.onnx.data
DDODS/9_Compression_and_Optimization/pruning/: structured_prune.ipynb  unstructured_prune.ipynb
DDODS/Docker_demo_2/: index.html  mongo.yaml  package.json  server.js
DDODS/FastAPI_Docker_demo_1/: Dockerfile  app.py  requirements.txt
DDODS/Module_1_ML_Systems_Intro/: README.md
DDODS/Module_1_ML_Systems_Intro/Lesson_1_Serving_with_FastAPI/: FASTAPI_DOCKER_GUIDE.md  README.md  article.md
DDODS/Module_1_ML_Systems_Intro/Lesson_2_Docker_in_Depth/: Dockerfile  README.md  docker-compose.yml  docker_commands.md  package.json  server.js
DDODS/Module_2_Reproducibility/: README.md
DDODS/Module_2_Reproducibility/Lesson_1_Data_and_Model_Versioning/: DVC_GUIDE.md  README.md
DDODS/Module_2_Reproducibility/Lesson_2_Experiment_Tracking_MLflow/: .gitignore  README.md  exp-tracking.ipynb
DDODS/Module_2_Reproducibility/Lesson_3_Experiment_Tracking_WandB/: README.md  WANDB_GUIDE.md
DDODS/Module_3_Data_Engineering/: README.md
DDODS/Module_3_Data_Engineering/Lesson_1_Data_Pipelines/: DATA_PIPELINE_GUIDE.md  README.md  data_pipeline.ipynb
DDODS/Module_3_Data_Engineering/Lesson_2_Feature_Store/: FEAST_GUIDE.md  README.md  pipeline_with_feast.ipynb
DDODS/Module_3_Data_Engineering/Lesson_3_Orchestration_and_Scale/: DATA_PIPELINE_PART3_GUIDE.md  README.md
DDODS/Module_4_Model_Optimization_and_Serving/: README.md
DDODS/Module_4_Model_Optimization_and_Serving/Lesson_1_Compression/: .gitignore  COMPRESSION_OVERVIEW.md  README.md
DDODS/Module_4_Model_Optimization_and_Serving/Lesson_2_Serving/: README.md
DDODS/Module_5_Cloud_and_Infra/Lesson_1_K8s/: Dockerfile  README.md  deployment.yaml  pyproject.toml  requirements.txt  test.py
DDODS/Module_5_Cloud_and_Infra/Lesson_2_Cloud_and_AWS/: 2-aws-intro.html
DDODS/Module_5_Production_Engineering/Lesson_1_K8s/: K8s.md  app.py  kind-config.yaml  service.yaml  train.py
DDODS/Module_5_Production_Engineering/Lesson_2_Cloud_and_AWS/: 1-Cloud_Fundemetals.html  3-EKS.html
DDODS/Module_6_Observability_and_Monitoring/: FOUNDATION.md  README.md
DDODS/Module_6_Observability_and_Monitoring/Evidently/: README.md  data_summary.html  drift_report.html
DDODS/profile_app/: docker-compose.yaml
DDODS/scripts/: pre-commit  strip_notebooks.py
SDC/: PROJECT_STRUCTURE.md  Quickstart.md  README.md  api.py  augmentation.py  config.yaml  docker-compose.yml  evaluate.py  main.py  pyproject.toml  requirements.txt  sesame_disease_model.py  utils.py
SDC/Application Files/: inference.py  main.py
SDC/Core Model Files/: dataset.py  preprocessing.py  train.py
SDC/Deployment/: Dockerfile
(+164 files in other folders)
