[project]
name = "ddods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "fastparquet>=2025.12.0",
    "joblib==1.5.1",
    "nbformat>=5.10.4",
    "numpy==2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic==2.11.7",
    "requests==2.32.4",
    "scikit-learn==1.7.1",
    "uvicorn==0.35.0",
    "wandb>=0.25.0",
]
