[project]
name = "ddods"
version = "0.1.0"
description = "Data Platform with MLOps, Feature Store, Monitoring, and Model Observability"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Web API
    "fastapi==0.122.0",
    "uvicorn==0.34.0",
    "starlette-exporter==0.23.0",

    # Data Processing
    "numpy==2.3.5",
    "pandas==2.3.3",
    "fastparquet>=2025.12.0",
    "openpyxl>=3.1.5",

    # Machine Learning
    "scikit-learn==1.7.1",
    "joblib==1.5.1",

    # Deep Learning
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "torchao>=0.17.0",

    # Feature Store
    "feast>=0.58.0",

    # Monitoring & Observability
    "evidently==0.7.21",
    "grafanalib==0.7.1",
    "prometheus-client==0.23.1",
    "psutil==7.1.3",

    # Orchestration
    "prefect>=3.7.1",

    # Big Data
    "pyspark>=4.1.1",

    # Utilities
    "pydantic==2.12.5",
    "requests==2.32.5",
    "protobuf>=4.24.0,<5",
    "setuptools>=60,<70",
    "nbformat>=5.10.4",
    "wandb>=0.25.0",
]