[project]
name = "sdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.3.0",
    "black>=23.7.0",
    "fastapi>=0.103.0",
    "flake8>=6.1.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pytest>=7.4.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "segmentation-models-pytorch>=0.3.0",
    "tensorboard>=2.13.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "uvicorn>=0.23.0",
]
