[project]
name = "monitoring-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently==0.7.17",
    "fastapi==0.122.0",
    "grafanalib==0.7.1",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "prometheus-client==0.23.1",
    "psutil==7.1.3",
    "pydantic==2.12.5",
    "requests==2.32.5",
    "starlette-exporter==0.23.0",
    "uvicorn==0.38.0",
]
